style.css
@import url('https://fonts.googleapis.com/css2?family=Aleo:wght@300;400;700&family=B612&family=BioRhyme:wght@200;300;400&family=Poppins:wght@100;200;300;400;500;600;700&display=swap');

*, 
*::before, 
*::after{
    box-sizing: border-box;
}

:root{
    --ff--primary: 'Poppins';
    --ff--secondary: 'Aleo';

    --fw-light: 100;
    --fw-regular: 300;
    --fw-medium: 500
    --fw-bold: 700;
    --fw-verybold: 800;

    --clr-light:#ffff;  
    --clr-dark: #5D576B;
    --clr-accent1:#17A398;  
    --clr-accent2: #FFDD4A;
    --clr-accent3: #EF5DA8;
    --clr-accent4: #F3DFC1;


    --fs-h1: 3rem;
    --fs-h2: 2rem;
    --fs-h3: 1.5rem;
    --fs-p: 1rem;
    --fs-li:1.5rem;

}

@media (min-width:800px){
    :root {
        --fs-h1:4.5rem;
        --fs-h2:2rem;
        --fs-h3: 1.5rem;
        --fs-p: 1.25;
        --fs-li:1.5rem;
    }
}

body{
    background: var(--clr-light);
    color: var(--clr-dark);
    top:0;
    left:0;
    margin:0;
    padding: 0; 
    font-family: var(--ff--primary);
    line-height: 1.6;
    width: 100vw;
}

header{
   
    padding: 1rem;
    align-items: center;
    background-color: var(--clr-accent4);
    height: 100vh;

}


bodysection{
    width:100vw;
    margin: 0;
    
}

.storyContainer, .solutionsWrapper, .startWrapper, .featureWrapper, .teamWrapper{
    margin: 0em;
    margin-left: 0;
    margin-top: 2em;
   /* padding: 2em;*/
}

/*Hero Section*/


header h1{
    color: var(--clr-accent1);
    font-weight: var(--fw-verybold);
}

header h2{
    color: var(--clr-light);
    font-weight: var(--fw-bold);
    
}

.menu{
    position: sticky;
    display: flex;
    top: 0;
    left: 0;
    right: 0;
    height: 80px;
    width: 100vh;
    background-color: var(--clr-accent4);
}

.menu ul{
    display:flex;
    justify-content: space-evenly;
    padding: 0;
    
}

.menu li, a{
    padding: .2em;
    list-style: none;
    color:var(--clr-light);
    font-size: var(--fs-p);
    text-decoration: none;
}
.menu a:hover{
    color:var(--clr-accent1)
}

.logo{
    height: 5rem;
    margin: .1em;
}

#story{
    background-color: var(--clr-light);
}

.heroTxt{
    text-align: left;
    position: absolute;
    top: 40%;
    left: 5rem;
    margin-bottom: 1rem;

}

.heroTxt h1{
    font-size: 5rem;
}

.headerBtn{
    background-color: var(--clr-accent4);
    width: 9em;
    height: 4em;
    border-radius: 10px;
    border: .2em solid var(--clr-light);
    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
    color:var(--clr-light);
    font-size: 1em;
}

.floatMenu{
    width: 100vh;
    float: right;
}

@media only screen and (min-width:600px){
    .heroWrapper{
        width: 100vw;
        margin-top: 3em;
        display: flex;
        flex-direction: row;
        justify-content: flex-end;
    }
   

    #mainImg{
        margin-right: 20%;
        margin-top: 10%;
        justify-self: end;
    }

    .heroTxt{
        text-align: left;
        position: absolute;
        top: 35%;
        left: 15rem;
        margin-bottom: 1rem;
    
    }

    .logo{
        height: 8rem;
        margin: .1em;

    }
  
    .menu li, a{
        padding: .2em; 
        color:var(--clr-light);
        font-size: var(--fs-h3);
        text-decoration: none;
    }
    .menu ul{
        width: 90%;
        list-style: none;
        float: right;

       
    }
}


/*story*/
.storyContainer{
    padding: 3em;
}

@media only screen and (min-width:600px){

    .storyContainer{
        height: 60vh;
        margin-left: 3em;
        padding-bottom: 4em;
        margin-bottom: 4em;
        
    }


}
/*Facts - organize*/

#solutions{
    background-color: var(--clr-accent3);
    display: flex;
  
}
.factsWrapper{
    /*padding:3em ;*/
    width: 100vw;
    justify-content: space-evenly;
}

.facts{

    margin:3em ;
}

.facts p{
    width: 90%;
}

.factsWrapper h3{
    color: var(--clr-accent2);
}

@media only screen and (min-width:600px){

    #solutionsTitle{
        margin-left: 3em;
        color: var(--clr-accent2)
    }
    .solutionsWrapper{
        margin: 1%;
        width: 100vw;
        height: 50vh;;
    }

    .factsWrapper{
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        height: 80%;
        margin-bottom: 3em;
       
       
    }

    .facts{
        width: 30%;
        padding: 1em;
        margin: 1%;
        text-align: center;
    }
}  

 
/*features section*/

.featureGrid

.feature{
    background-color: var(--clr-light);
    display: table;
    table-layout: fixed;
    align-items: center;
}



.feature:nth-child(even) {
    flex-direction: row-reverse; 
  }

  .feature:nth-child(even) {
    float: right;
  }

 .featureTxt,.featureImg{
     display: table-cell;
     direction: ltr;
    
  }
  .featureTxt{
    vertical-align: middle;
    text-align: left;
    width: 40%;
  }

  .featureGrid img{
      vertical-align: top;
  }

#features>div{
    padding: 10%;
}



/*
.featureTxt{
    width: 66.66%;
}
:nth-child(odd) div.featureTxt{
    float: right;
}


*/



/*Create section - link to demo*/
#create{
    background-color: var(--clr-accent2);
 
}

.startWrapper{
    text-align: center;
    padding: 3em;
    
}


@media only screen and (min-width:600px){
    .startWrapper{
        text-align: center;
        padding: 3em;
        
    }
}

/*team section*/

#team{
    background-color: var(--clr-accent4);
    padding: 2em;
    text-align: center;
    
   
}
.teamTitle{
    justify-content: center;
}

.startBtn{
    background-color: var(--clr-accent1);
    width: 9em;
    height: 4em;
    border-radius: 10px;
    border: none;
    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
    color:var(--clr-light);
}


@media only screen and (min-width:600px){

    #team{
        padding: 3em;
    }
    .teamWrapper {
        margin: 3em;
        height: 50vh;
        display: flex;
        flex-direction: row;
        justify-content: space-between;
    }

    .teamMember{
        width: 30%;
        background-color: var(--clr-accent1);
        padding: 1em;
        margin: 1%;
        text-align: center;
    }
}   



 
footer{
    width: 100vw;
    background-color: var(--clr-accent4);
    display: flex;
    text-align: center;
    vertical-align: middle;
    top: 0;
    left: 0;
    
}

